--- a/frontend/src/app/user/components/dashboard/navbar.component.css
+++ b/frontend/src/app/user/components/dashboard/navbar.component.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 8rem;
   background: #fff;
   border-radius: 0 0 12px 12px;
   box-shadow: 0 1px 4px rgba(0,0,0,0.04);
@@ -562,13 +562,16 @@
 } 
 
 .dashboard-wrapper {
-  padding-top: 180px;
+  margin-top: 4rem;
 }
 .welcome-card {
+  height: 18rem;
+  padding-top: 16rem;
   max-width: 1000px;
   min-height: 120px;
   margin: 0 auto 2.5rem auto !important;
-  padding: 3rem 3rem 2.5rem 3rem;
+  margin-top: 20rem;
+  padding: 30rem 2rem 2rem 2rem;
   border-radius: 18px;
   background: linear-gradient(90deg, #3b5bfa 0%, #a855f7 100%);
   color: #fff;
