--- a/frontend/src/app/user/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/user/components/dashboard/dashboard.component.html
@@ -1,11 +1,10 @@
 <app-user-navbar></app-user-navbar>
-<div class="dashboard-wrapper">
+<div class="dashboard-wrapper" style="margin-top: 2rem;">
   <div class="dashboard-container">
     <div class="dashboard-content">
-      <!-- Removed stats-grid -->
       <div class="dashboard-grid">
         <div class="dashboard-section">
-          <div class="section-header">
+          <div class="section-header" >
             <h2>Recent Parcels</h2>
             <div>
               <button 
